--- a/app/src/main/res/layout-land/fragment_table.xml
+++ b/app/src/main/res/layout-land/fragment_table.xml
@@ -18,12 +18,45 @@
             android:layout_alignParentLeft="true"
             android:textStyle="bold"/>
         <TextView
+            android:id="@+id/text_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/text_position"
+            android:layout_marginRight="30dp"
             android:text="@string/team"
             android:textStyle="bold"/>
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="240dp"
+            android:text="@string/gp"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="180dp"
+            android:text="@string/w"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="120dp"
+            android:text="@string/d"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp"
+            android:text="@string/l"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/pts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
