--- a/app/src/main/res/layout/activity_match_detail.xml
+++ b/app/src/main/res/layout/activity_match_detail.xml
@@ -11,6 +11,11 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@android:color/background_dark">
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
     </FrameLayout>
 
     <RelativeLayout
