--- a/app/src/main/res/layout/media_controller.xml
+++ b/app/src/main/res/layout/media_controller.xml
@@ -4,18 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal">
         <ImageButton
             android:id="@+id/pause"
+            android:layout_gravity="center_horizontal"
             style="@android:style/MediaButton.Play" />
         <ImageButton
             android:id="@+id/next"
+            android:layout_gravity="end"
             style="@android:style/MediaButton.Next" />
-    </LinearLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
