--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="match_list_item_image_height">80dp</dimen>
     <dimen name="match_list_item_image_width">80dp</dimen>
     <dimen name="detail_backdrop_height">256dp</dimen>
+    <dimen name="team_logo_size">40dp</dimen>
 </resources>
