--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="match_list_item_image_width">80dp</dimen>
     <dimen name="detail_backdrop_height">256dp</dimen>
     <dimen name="team_logo_size">40dp</dimen>
+    <dimen name="team_margin_right">40dp</dimen>
+    <dimen name="text_team_size">20dp</dimen>
 </resources>
